--- a/docs/data/config.ini
+++ b/docs/data/config.ini
@@ -46,3 +46,14 @@ restEndpoint={"protocol":"https", "host":"api.labs.cognitive.microsoft.com", "pa
 
 msAcademicIncludeTopicsIds=["108583219", "154945302", "119857082"]
 msAcademicExcludeTopicsIds=[]
+
+
+[ate]
+term_patterns=[
+    "Noun+Noun",
+    "( Adj | Noun ) + Noun",
+    "((Adj | Noun ) + | (( Adj | Noun )* ( Noun Prep ) ? )( Adj | Noun )* ) Noun"
+    ]
+min_term_words=2
+min_term_length=3
+
