--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ free-proxy = "*"
 openpyxl = "*"
 textract = "*"
 pypdf2 = "*"
+pyahocorasick = "*"
+psutil = "*"
 
 [requires]
 python_version = "3.6"
