--- a/docs/data/config.ini
+++ b/docs/data/config.ini
@@ -6,6 +6,9 @@ data_dir = ../data/GAN
 ; how many ids post to REST API at once
 batch_size =  85
 
+; how many entries collect while snowball sampling
+max_entries = 20000
+
 ; save current state every save_period batches
 save_period =  2
 
