update sample calls and sample data

--- a/docs/data/config.ini
+++ b/docs/data/config.ini
@@ -1,10 +1,11 @@
 [main]
 
 ; where data is located
-data_dir = ../data/GAN
+data_dir = ../data/openalex-test
+
 
 ; how many ids post to REST API at once
-batch_size =  85
+batch_size =  20
 
 ; how many entries collect while snowball sampling
 max_entries = 20000
@@ -12,43 +13,92 @@ max_entries = 20000
 ; save current state every save_period batches
 save_period =  2
 
+
+
+
+[000_download]
+;
+log_file_name = 000_download.log
+
+; input queue
+file_path_queued_ids = 000_download_queued_ids.csv
+
+; processed + unput queue
+file_path_known_ids =  000_download_known_ids.csv
+
+; processed queue
+file_path_done_ids = 000_download_done_ids.csv
+
+; seed articles
+file_path_seed_ids = in-seed.csv
+
+[001_tokenizer]
+log_file_name = 001_tokenizer.log
+min_word_length = 3
+
+[002_rarewords]
+log_file_name = 002_rarewords.log
 ; percentage of rare words to exclude
 alpha = 0.02
 
+[003_joint_probabilities]
+log_file_name = 003_joint_probabilities.log
 
+[004_stopwords]
+log_file_name = 004_stopwords.log
 ; percentage of stop words to exclude
-; Hmax = 0.02
-Hmax = 0.0
+Hmax = 0.02
 
-
-; number of components in PCA ( = number of topics )
+[006_SSNMF]
+log_file_name = 004_stopwords.log
+; maximal number of components in PCA ( = number of topics )
 Pmax = 200
-
 
 ; Sparsity parameter
 lambda = 0.000000001
 
+maxIterations=50
+eta=0.1
+beta=0.99
+beta2=1.000
+maxError=1e-7
+
+
+
+[007_restricted_snowball]
+log_file_name = 007_restricted_snowball.log
 
 ; KL divergence + data-kl-robustness-test
 measure=kl
 maxDistance = 0.25
 
+file_path_queued_ids = 007_restricted_snowball_queued_ids.csv
+file_path_seed_ids = in-seed.csv
+file_path_known_ids = 007_restricted_snowball_known_ids.csv
+file_path_done_ids = 007_restricted_snowball_done_ids.csv
 
+
+[008_search_path_count]
+log_file_name = 008_search_path_count.log
 
 min_in_degree = 3
 n_top_paths = 600
 max_citation_net_nodes=10000
 
-[google_scholar]
-proxy=http://95.211.175.167:13151
+min_year = 2010
 
-[msacademic]
+[009_extend_items_google_scholar]
+proxy=https://83.149.70.159:13012
+log_file_name = 009_extend_items_google_scholar.log
 
-subscriptionKey=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-restEndpoint={"protocol":"https", "host":"api.labs.cognitive.microsoft.com", "path":"/academic/v1.0/evaluate"}
+[010_download_pdfs]
+log_file_name = 010_download_pdfs.log
 
-msAcademicIncludeTopicsIds=["108583219", "154945302", "119857082"]
-msAcademicExcludeTopicsIds=[]
+
+[openalex]
+;                         Planar graph;
+openalexIncludeTopicsIds=["C101837359"]
+openalexExcludeTopicsIds=[]
 
 
 [ate]
